Adjust css styles for usability

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <h1>Sketch-Doodler!</h1>
     <button class="set-number">Set Number of Squares</button>
     <div class="main-container"></div>
 </body>
