Create clear button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Sketch-Doodler!</h1>
     <button class="set-number">Set Number of Squares</button>
+    <button class="clear">Clear</button>
     <div class="main-container"></div>
 </body>
 </html>
